--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
 PORT=3000
 OPENAI_API_KEY=
 OPENAI_API_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
+LANGFUSE_SECRET_KEY= "sk-lf-..."
+LANGFUSE_PUBLIC_KEY= "pk-lf-..."
+LANGFUSE_BASEURL="https://..."
