--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "removeComments": true,
       "preserveConstEnums": true,
       "sourceMap": true,
+      "allowSyntheticDefaultImports": true,
       "outDir": "dist",
       "moduleResolution": "node"
     },
