--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "langfuse": "^3.38.4",
-    "openai": "^5.11.0",
+    "mem0ai": "^2.1.37",
+    "openai": "^5.13.1",
     "zod": "<=3.25.67"
   },
   "devDependencies": {
