--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:check": "eslint src/",
+    "lint:fix": "eslint --fix src/"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +23,12 @@
     "zod": "<=3.25.67"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0"
+    "@types/node": "^24.1.0",
+    "eslint": "^9.33.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "typescript-eslint": "^8.40.0"
   }
 }
