--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.19.0",
     "@openai/agents": "^0.0.14",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
