--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "langfuse": "^3.38.4",
     "mem0ai": "^2.1.37",
+    "multer": "^2.0.2",
     "openai": "^5.13.1",
     "zod": "<=3.25.67"
   },
@@ -27,6 +28,7 @@
     "@eslint/js": "^9.33.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
     "eslint": "^9.33.0",
     "globals": "^16.3.0",
