--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@google/genai": "^1.19.0",
     "@openai/agents": "^0.0.14",
+    "@prisma/client": "^6.16.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -34,6 +35,7 @@
     "eslint": "^9.33.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "prisma": "^6.16.1",
     "typescript-eslint": "^8.40.0"
   }
 }
